[tool.poetry]
name = "pycounts"
version = "0.2.0"
description = "Calculate word counts in a text file!"
authors = ["Tomas Beuzen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
myst-nb = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
jupyter = "^1.0.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^0.5.2"
python-semantic-release = "^7.19.1"

[tool.semantic_release]
# where to update version number
version_variable = "pyproject.toml:version"
# branch to make releases from
branch = "main"
# changelog file
changelog_file = "CHANGELOG.md"
# commands to build sdist and wheel
build_command = "pip install poetry && poetry build"
# don't auto-upload to PyPI (we'll do this later)
upload_to_pypi = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
